adding completed take-home

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <!---MAIN--->
     <section class="container">
-      <div class="row justify-content-md-center">
+      <div class="row">
         <input type="text" class="percent">
         <button type="button" class="run-btn btn btn-sm btn-info ml-1">Run</button>
       </div>
